--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,7 @@ header > img{
     width: 300px;
     border-radius: 10px;
     display: flex;
-    margin-top: -575px;
+    margin-top: -600px;
 }
 
 #clock{  
@@ -37,7 +37,7 @@ header > img{
     padding: 10px;
     margin-left: auto;
     margin-right: auto;
-    display: block;
+    display: flex;
  }
 
  #clock3{
@@ -47,7 +47,7 @@ header > img{
     padding: 10px;
     margin-left: auto;
     margin-right: auto;
-    display: block;
+    display: flex;
  }
 
 .dag{
