--- a/styles.css
+++ b/styles.css
@@ -90,14 +90,30 @@ div > img{
 	position: absolute;
 	top: 10px;
 	left: 10px;
-	animation: 1000ms pulsate infinite alternate ease-in-out;
+	animation: 2000ms pulsate infinite alternate ease-in-out;
 }
 
 @keyframes pulsate {
   0% { 
-  	top: 500px; 
+  	top: 200px; 
+  }
+
+  25%{
+    left: 50px;
+    top: 250px;
+  }'
+  
+  50%{
+    left: 100px;
+    top: 300px;
+  }
+
+  75%{
+      left: 50px;
+      top: 400px;
   }
   100% { 
-  	top: 530px;
+  	left: 10px;
+    top: 530px;
   }
 }
