--- a/grid.css
+++ b/grid.css
@@ -1,50 +1,19 @@
-/* body{
-    display: grid;
-    grid-template-columns: 1fr;
-  
-    grid-template-areas: 
-          /* "container" */
-          /* "header"
-          "main"
-          "klok1"
-          "klok2"
-          "klok3"
-          "raket"; 
-  } */ */
-
-  /* .container{
-    grid-area: container;
-  } */
-  /* .header{
-    grid-area: header;
-  }
-
-  .main{
-    grid-area: main;
-  }
-
-  .klok1{
-    grid-area: klok1;
-  }
-
-  .klok2{
-    grid-area: klok2;
-  }
-
-  .klok3{
-    grid-area: klok3;
-  }
-
-  .raket{
-    grid-area: raket;
-  } */
 
   @media only screen and (min-width: 601px){
-    
+    header > img{
+      width: 220px;
+    }
 
+    #clock{
+      font-size: 1em;
+    }
 
-    .container{
-      height: 100vh;
+    #clock2{
+      font-size: 1em;
+    }
+
+    #clock3{
+      font-size: 1em;
     }
 
     aside{
@@ -52,16 +21,24 @@
       flex-direction: row;
       align-items: center;
       justify-content: center;
+      width: 130px;
     }
-  }
 
     @media only screen and (min-width: 901px){
-        header > img{
-          margin-top: -700px;
-        }
-
-        .container{
-          height: 100vh;
+      header > img{
+        width: 270px;
+      }
+     
+      #clock{
+        font-size: 1.2em;
+      }
+  
+      #clock2{
+        font-size: 1.2em;
+      }
+  
+      #clock3{
+        font-size: 1.2em;
       }
 
       aside{
@@ -69,22 +46,31 @@
         flex-direction: row;
         align-items: center;
         justify-content: center;
+        width: 170px;
       }
     }
 
       @media only screen and (min-width: 1201px){
-       .container{
-          height: 100vh;
-         }
+        header > img{
+          width: 320px;
+        }
+
+        #clock{
+          font-size: 1.3em;
+        }
+
+        #clock2{
+          font-size: 1.3em;
+        }
+
+        #clock3{
+          font-size: 1.3em;
+        }
 
          aside{
           display: flex;
           flex-direction: row;
           align-items: center;
           justify-content: center;
+          width: 200px;
         }
-
-        header > img{
-          margin-top: -575px;
-        }
-       }
